# sms2mqtt

./: .ai-factory.json  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  README.md  README.ru.md  compose.production.yml  compose.yml  docker-compose.persistence.yml  gammu_layer.py  logic.py  mqtt_layer.py  pyproject.toml  requirements-dev.txt  requirements.txt  sms2mqtt.py
.agent/rules/: aif-conventions.md  aif-guardrails.md
.agent/workflows/: aif-commit.md  aif-deploy.md  aif-fix.md  aif-implement.md  aif-improve.md  aif-plan.md  aif-verify.md  aif.md
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md  RECOMMENDATIONS-PLAN.md  ROADMAP.md
.ai-factory/patches/: 2026-02-24-12.00.md  2026-02-24-20.25.md  2026-02-25-07.00.md  2026-02-25-12.45.md  2026-02-25-15.30.md
.ai-factory/plans/: docs-documentation-and-security.md  docs-russian-persistence-readme.md  feature-optional-sms-persistence.md  feature-reliability-and-config.md  feature-testing-foundation.md  refactor-code-quality.md
.github/workflows/: ci.yml  codeql-analysis.yml  (+2 more)
docs/: configuration.md  development.md  dockge.md  getting-started.md  mqtt-topics.md  persistence.md  security.md  troubleshooting.md
scripts/: check-modem-ports.sh  deploy-persistence.sh  deploy.sh  modem-stat.sh
sms2mqtt-persistence/: Dockerfile  README.md  README.ru.md  config.py  db.py  listener.py  persist.py  pyproject.toml  requirements.txt  schema.sql
sms2mqtt-persistence/tests/: test_parse.py
tests/: __init__.py  test_config_and_mqtt.py  test_received_publish.py  test_send_validation.py
(+46 files in other folders)
