[project]
name = "sms2mqtt"
version = "0.0.0"
description = "SMS-to-MQTT bridge"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv", "*.pyc", ".agent", ".cursor", ".gemini", ".opencode"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
