[project]
name = "sms2mqtt"
version = "0.0.0"
description = "SMS-to-MQTT bridge"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "certifi>=2023.7.22",
]
[project.optional-dependencies]
# Pinned <3.2.6: 3.2.6 requires Gammu>=1.43; Alpine has 1.42.0
run = [
    "python-gammu>=3.2,<3.2.6",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv", "*.pyc", ".agent", ".cursor", ".gemini", ".opencode"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
