[project]
name = "sms2mqtt-persistence"
version = "0.0.0"
description = "MQTT listener to PostgreSQL for SMS2MQTT"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "certifi>=2023.7.22",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
